(codethorn) VTable generation for virtual inh.
- fixes issues in generating vtables for virtual inheritance
- added convenience interface for vtable construction
- fixed issues with covariant return types
- added support for generated overriders
- TODO: support generated assignment operators fully
- TODO: complete vtable construction
- TODO: handling of covariant functions

RC-1378

--- a/projects/CodeThorn/src/tests/Cpp98Tests/Readme
+++ b/projects/CodeThorn/src/tests/Cpp98Tests/Readme
@@ -6,4 +6,6 @@ ROSE tests for the C++ 98 object model.
 The corresponding test script is under:
 CODETHORN_HOME/scrips/runCpp98Tests
 
+The Cxx* tests are executable tests.
+The CH* tests test the class hierarchy analysis.
 
