(codethorn) removing dead code (1)
* removed outdated files (dead code) and anlyterix (was only used for some tests in the past)
	deleted:    CppExprEvaluator.C
	deleted:    CppExprEvaluator.h
	deleted:    IntervalAnalysis.C
	deleted:    IntervalAnalysis.h
	deleted:    IntervalAstAttribute.C
	deleted:    IntervalAstAttribute.h
	deleted:    IntervalAstAttributeInterface.C
	deleted:    IntervalAstAttributeInterface.h
	deleted:    IntervalPropertyState.C
	deleted:    IntervalPropertyState.h
	deleted:    IntervalPropertyStateFactory.C
	deleted:    IntervalPropertyStateFactory.h
	deleted:    IntervalTransferFunctions.C
	deleted:    IntervalTransferFunctions.h
	deleted:    analyterix-src/DFAstAttributeConversion.C
	deleted:    analyterix-src/DFAstAttributeConversion.h
	deleted:    analyterix-src/DeadCodeAnalysis.C
	deleted:    analyterix-src/DeadCodeAnalysis.h
	deleted:    analyterix-src/FIPointerAnalysis.C
	deleted:    analyterix-src/FIPointerAnalysis.h
	deleted:    analyterix-src/RoseRDAnalysis.C
	deleted:    analyterix-src/RoseRDAnalysis.h
	deleted:    analyterix-src/TransformationOperators.C
	deleted:    analyterix-src/TransformationOperators.h
	deleted:    analyterix-src/analyterix.C
	deleted:    analyterix-src/rd-analysis-standalone-example.C

--- a/projects/CodeThorn/src/TODO
+++ b/projects/CodeThorn/src/TODO
@@ -18,6 +18,22 @@ IntervalPropertyState.h
 IntervalTransferFunctions.C
 IntervalTransferFunctions.h
 
+CppExprEvaluator.h
+CppExprEvaluator.C
+analyterix-src/analyterix.C
+analyterix-src/DeadCodeAnalysis.C
+analyterix-src/DeadCodeAnalysis.h
+analyterix-src/DFAstAttributeConversion.C
+analyterix-src/DFAstAttributeConversion.h
+analyterix-src/FIPointerAnalysis.C
+analyterix-src/FIPointerAnalysis.h
+analyterix-src/rd-analysis-standalone-example.C
+analyterix-src/RoseRDAnalysis.C
+analyterix-src/RoseRDAnalysis.h
+analyterix-src/TransformationOperators.C
+analyterix-src/TransformationOperators.h
+
+
 RDAnalysis.C
 RDAnalysis.h
 RDAstAttribute.C
