(codethorn) removing dead code (2)
* removed outdated files (dead code)
  - removed RDAnalysis
	deleted:    RDAnalysis.C
	deleted:    RDAnalysis.h
	deleted:    RDAstAttribute.C
	deleted:    RDAstAttribute.h
	deleted:    RDLattice.C
	deleted:    RDLattice.h
	deleted:    RDTransferFunctions.C
	deleted:    RDTransferFunctions.h
	deleted:    UDAstAttribute.C
	deleted:    UDAstAttribute.h
  - adapted some APIs (removed flags)
        modified:   shared-src/ProgramStats.h
	modified:   CodeThornLib.C
	modified:   CtxLattice.h
  - removed RD-based UD vis
        modified:   DataDependenceVisualizer.C
	modified:   DataDependenceVisualizer.h
  - adapted Makefile for removed files
     modified:   Makefile.am

CODETHORN-70

--- a/projects/CodeThorn/src/TODO
+++ b/projects/CodeThorn/src/TODO
@@ -3,8 +3,8 @@
   #define NO_ESTATE -4
   from file Labeler.h to CodeThorn.h header file (to be created).
 
-11)
-remove 
+11) DONE
+remove dead code
 IntervalAnalysis.C
 IntervalAnalysis.h
 IntervalAstAttribute.C
@@ -33,7 +33,7 @@ analyterix-src/RoseRDAnalysis.h
 analyterix-src/TransformationOperators.C
 analyterix-src/TransformationOperators.h
 
-
+12) remove dead code
 RDAnalysis.C
 RDAnalysis.h
 RDAstAttribute.C
@@ -42,6 +42,9 @@ RDLattice.C
 RDLattice.h
 RDTransferFunctions.C
 RDTransferFunctions.h
+UDAstAttribute.C
+UDAstAttribute.h
+
 
 LVAnalysis.C
 LVAnalysis.h
