(codethorn) removed dead code (5)
* removed dead code (also without tests)
  - DataRaceDetection (outdated experiment implementation)
	deleted:    DataRaceDetection.C
	deleted:    DataRaceDetection.h
	modified:   Makefile.am
  - movified files removed #include and optional invocation
	modified:   CodeThornLib.C
	modified:   LTLThornLib.C
	modified:   codethorn.C
	modified:   thorn1.C

CODETHORN-70

--- a/projects/CodeThorn/src/TODO
+++ b/projects/CodeThorn/src/TODO
@@ -46,7 +46,7 @@ RDTransferFunctions.h
 UDAstAttribute.C
 UDAstAttribute.h
 
-13)
+13) DONE
 remove dead code
 LVAnalysis.C
 LVAnalysis.h
@@ -57,10 +57,13 @@ LVAstAttributeInterface.h
 LVLattice.C
 LVLattice.h
 
-
+14) DONE
+remove dead code
 AstTermRepresentation.C
 AstTermRepresentation.h
 
+15)
+remove dead code
 DataRaceDetection.C
 DataRaceDetection.h
 
