(codethorn) removed dead code (5 of 5)
* removed dead code
  - removed constraint representation (not used anymore)
  	deleted:    ConstraintRepresentation.C
	deleted:    ConstraintRepresentation.h
  - removed EStateAnalysis (experiment, never used)
        deleted:    EStateAnalysis.C
	deleted:    EStateAnalysis.h
	deleted:    EStateFactory.C
	deleted:    EStateFactory.h
  - adapted code to remove header file includes and obsolete tests
        modified:   InternalChecks.C
	modified:   Makefile.am
	modified:   ltlthorn-lib/ParProEState.h
  - removed unused report converters
        deleted:    rers_latex_bin_assert_only
	deleted:    rers_latex_ltl

CODETHORN-70

--- a/projects/CodeThorn/src/TODO
+++ b/projects/CodeThorn/src/TODO
@@ -62,19 +62,19 @@ remove dead code
 AstTermRepresentation.C
 AstTermRepresentation.h
 
-15)
+15) DONE
 remove dead code
 DataRaceDetection.C
 DataRaceDetection.h
 
+16) DONE
+remove dead code
 ConstraintRepresentation.C
 ConstraintRepresentation.h
-
 EStateAnalysis.C
 EStateAnalysis.h
-
-PointerAnalysisInterface.h
-PointerAnalysisInterface.C
+EStateFactory.h
+EStateFactory.C
 
 rers_latex_bin_assert_only
 rers_latex_ltl
