--- a/docs/Rose/MainPage.dox
+++ b/docs/Rose/MainPage.dox
@@ -53,7 +53,7 @@
  *  @li [The ROSE public website](http://rosecompiler.org)
  *  @li [Download and installation](https://github.com/rose-compiler/rose/wiki#basic-info)
  *  @li [Source code analysis tutorial](http://rosecompiler.org/ROSE_Tutorial/ROSE-Tutorial.pdf) (PDF)
- *  @li @ref binary_tutorial
+ *  @li @ref binary_tutorial @ref Rose::BinaryAnalysis
  *  @li [ROSE user manual](http://rosecompiler.org/ROSE_UserManual/ROSE-UserManual.pdf) (PDF)
  *  @li [ROSE-Based Tools](https://github.com/rose-compiler/rose/wiki/ROSE-based-tools)
  *  @li [Publications](https://github.com/rose-compiler/rose/wiki/Publications)
